<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_new_game_id"
            style="@style/MainButtonStyle"
            android:text="@string/new_game_str" />

        <Button
            android:id="@+id/main_joid_game_id"
            style="@style/MainButtonStyle"
            android:text="@string/join_game_str" />

        <Button
            android:id="@+id/main_help_id"
            style="@style/MainButtonStyle"
            android:text="@string/help_str" />

        <Button
            android:id="@+id/main_setting_id"
            style="@style/MainButtonStyle"
            android:text="@string/setting_str" />
    </LinearLayout>

</RelativeLayout>