<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/setting_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/setting_str"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/USER_NAME"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="17sp" 
                android:singleLine="true"/>

            <TextView
                android:id="@+id/edit_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/edit_text"
                android:gravity="right|fill"
                android:textSize="17sp" 
                android:textColor="@android:color/holo_orange_light"
                android:singleLine="true"/>
                
        </LinearLayout>

        <TextView
            android:id="@+id/wifi_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/wifi_setting_str"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/wifi_radiogroup_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/open_wifi_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingRight="30dp"
                android:text="@string/open_str"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/close_wifi_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_str"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <TextView
            android:id="@+id/music_volume_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/music_volume_str"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/music_radiogroup_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/open_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingRight="30dp"
                android:text="@string/open_str"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/close_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_str"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/qrcode_settting_str"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/qrcode_radiogroup_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:text="@string/close_str"
            android:textColor="@android:color/black" >

            <RadioButton
                android:id="@+id/open_qrcode_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingRight="30dp"
                android:text="@string/open_str"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/close_qrcode_id"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_str"
                android:textColor="@android:color/black" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>